code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_85.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-br_table
      (i32.const 0)
      (block (br_table 0 (if(then))) (drop))
    )
  )
  "type mismatch"
)